modulated out Routes broke City Edit
broke things because the root module got bloated and needed to section it out. will need to fix before continuing, cannot connect to edit cities anymore.

--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@
 SECRET_KEY=your_unique_secret_key_here
 
 # Database Connection String
-SQLALCHEMY_DATABASE_URI=postgresql://Game_Master:887441Lf!@localhost/Shop Generator
+SQLALCHEMY_DATABASE_URI=postgresql://Game_Master:887441Lf!@localhost/Shop_Generator
 
 # Optional: Flask Environment
 FLASK_ENV=development
