Issues with cached Cities
Trying to figure out why 4 cities are still displaying after deleting database and reconfiguring the entire thing.

--- a/config.env
+++ b/config.env
@@ -6,3 +6,5 @@ SQLALCHEMY_DATABASE_URI=postgresql://Game_Master:887441Lf!@localhost/Shop_Genera
 
 # Optional: Flask Environment
 FLASK_ENV=development
+
+print(f"[DEBUG] Connected to: {db.engine.url}")
