--- a/config.env
+++ b/config.env
@@ -2,9 +2,7 @@
 SECRET_KEY=your_unique_secret_key_here
 
 # Database Connection String
-SQLALCHEMY_DATABASE_URI=postgresql://Game_Master:887441Lf!@localhost/Shop_Generator
+SQLALCHEMY_DATABASE_URI=postgresql://game_master:887441Lf!@localhost/shop_generator
 
 # Optional: Flask Environment
 FLASK_ENV=development
-
-print(f"[DEBUG] Connected to: {db.engine.url}")
