Fixed Database connection

--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@
 SECRET_KEY=your_unique_secret_key_here
 
 # Database Connection String
-SQLALCHEMY_DATABASE_URI=postgresql://game_master:887441Lf!@localhost/shop_generator
+SQLALCHEMY_DATABASE_URI=postgresql://game_master:GM!@localhost/shopgen
 
 # Optional: Flask Environment
 FLASK_ENV=development
